# parse_saksoff5th

./: pyproject.toml
src/: curl  index.html  parse.py  products.db  test2.py  test3.py  test4.py  test5.py  test6.py  test_parse.py  women_product.html
src/proxy_auth_plugin/: background.js
