[tool.poetry]
name = "saksoff5th-parse"
version = "0.1.0"
description = ""
authors = ["gas <pankot222@gmail.com>"]
#readme = "README.md"
package-mode = false # for poetry

[tool.poetry.dependencies]
python = "^3.12"
#requests = "^2.32.3"
#aiohttp = "^3.10.10"
#beautifulsoup4 = "^4.12.3"
#selenium = "^4.25.0"
#selenium-wire = "^5.1.0"
#webdriver-manager = "^4.0.2"
requests = "^2.32.3"
aiohttp = "^3.10.10"
beautifulsoup4 = "^4.12.3"
selenium = "^4.25.0"
selenium-wire = "^5.1.0"
webdriver-manager = "^4.0.2"
blinker = "1.4"
setuptools = "^75.2.0"
undetected-chromedriver = "^3.5.5"
lxml = "^5.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
